--- a/blogdecafe_inicio/CSS/style.css
+++ b/blogdecafe_inicio/CSS/style.css
@@ -142,7 +142,7 @@
                                                                                                                 display: block;
                                                                                                                 text-align: center;
                                                                                                                 font-size: 1.8rem;
-                                                                                                                color: var(--balnco);
+                                                                                                                color: var(--blanco);
                                                                                                             }
                                                                                                             
                                                                                                             @media (min-width:768px) {
